# SpaceShooter

./: CMakeLists.txt  Makefile  README.md  SpaceShooter  audio.cpp  audio.h  bullet.cpp  bullet.h  enemy.cpp  enemy.h  explosion.cpp  explosion.h  game  game.cpp  game.h  main.cpp  particle.cpp  particle.h  plan.md  player.cpp  player.h  star.cpp  star.h  utils.cpp  utils.h
include/: Game.h  Renderer.h
src/: GameLogic.cpp  Renderer.cpp  main.cpp
